--- a/beehive-app/src/Components/headerstyle.css
+++ b/beehive-app/src/Components/headerstyle.css
@@ -1,14 +1,13 @@
 .header {
-  position: absolute;
-  align-items: center;
-  justify-content: space-between;
+  position: fixed;
   display: flex;
-  flex: 0 0 auto;
-  top: 0px;
-  height: 100px;
-  background-color: rgb(255, 192, 246);
-  z-index: 1;
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
   width: 100%;
+  height: 100px;
+  background-color: rgb(255, 192, 246); /* Pink background color */
+  z-index: 1000; /* Ensure it appears above other content */
 }
 
 .FEC-logo {
@@ -20,43 +19,26 @@
 
 .login-button {
   display: flex;
-  width: 223px;
-  height: 100px;
   align-items: center;
   justify-content: center;
   font-weight: bold;
   position: relative;
-  font-family: "Newsreader-SemiBold";
-  background-color: #e5bcff;
   border: none;
   font-size: 25px;
   text-decoration: none;
 }
 
-.login-button:hover {
-  cursor: pointer;
-  background-color: #e5e5;
-}
 
 .header a {
-  border: none;
-  color: black;
-  text-decoration: none;
+  margin-right: 25px; /* Adjust spacing between links */
+  color: black; /* Purple link color */
   font-weight: bold;
   font-size: 20px;
-  cursor: pointer;
-  margin-top: -1px;
-  font-family: "Newsreader-SemiBold", Helvetica;
-  font-weight: 600;
-  color: #000000;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
+  text-decoration: none;
 }
 
-.header a:visited,
-link:visited {
-  color: black;
+.header a:hover {
+  text-decoration: none;
 }
 
 .header button {
